responsive has finished

--- a/index.html
+++ b/index.html
@@ -1,14 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/a59611a003.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-     <header>
+    <!-- Header Section is started -->
+    <header>
+        <nav>
+            <div class="shopping-icon-container"> <i class="fa-solid fa-cart-shopping"></i></div>
+            <h2 class="web-name">Influencer products</h2>
+            <div class="dropdown">
+                <div class="bar-container"><i class="fa-solid fa-bars"></i></div>
+                <ul class="list-container">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Log In</a></li>
+                    <div class="icon-container">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i style="margin-left:0.8rem;" class="fa-solid fa-cart-shopping"></i>
+                    </div>
+                </ul>
+            </div>
+        </nav>
+        <div class="main-cemra-container">
+            <div class="banner-text-container">
+                <h2 class="banner-main-text">Start your Journey as <br>
+                    Influencer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.</p>
+                <button style="padding:0.5rem 1rem;background-color:red;color:white;font-weight: bolder;
+                    border-radius: 1rem;border:none;">PreeBook Now <i
+                        class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
+            <div class="cemra-container">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- The main Section is started -->
+
+    <main>
+
+        <!-- The logo Section is started -->
+        <section style="width:75vw;height:auto;border:3px solid black;margin: auto;margin: 2rem auto;">
+            <div class="logo-container">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+
+            </div>
+
+        </section>
+
+
+        <!-- The cards of main section started from here  -->
+
+
+        <section style="width:70vw;height:auto;border:3px solid black;margin: auto;margin: 2rem auto;background-color: #e6d1d18e;padding:0.7rem;box-shadow: 0px 0px 15px rgb(108, 98, 98);">
+            <div class="cards-container">
+                <article>
+                    <img src="images/tripod.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3 class="price">$50.48</h3>
+                     <div style="height:1.5rem;">
+                        <i style="color:#fb8200;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;" class="fa-solid fa-star-half-stroke"></i>
+                        <p style="display:inline-block"> &nbsp; 4.99</p>
+                     </div>
+                     <p class="card-text">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </article>
+                <article>
+                    <img src="images/mic.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3 class="price">$50.48</h3>
+                     <div style="height:1.5rem;">
+                        <i style="color:#fb8200;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;" class="fa-solid fa-star-half-stroke"></i>
+                        <p style="display:inline-block"> &nbsp; 4.99</p>
+                     </div>
+                     <p class="card-text" >Wordwide shifting available
+                        Buyers protection possible!</p>
+                </article>
+                <article>
+                    <img src="images/airpod.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3 class="price" >$50.48</h3>
+                     <div style="height:1.5rem;">
+                        <i style="color:#fb8200;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;" class="fa-solid fa-star-half-stroke"></i>
+                        <p style="display:inline-block"> &nbsp; 4.99</p>
+                     </div>
+                     <p class="card-text" >Wordwide shifting available
+                        Buyers protection possible!</p>
+                </article>
+                <article>
+                    <img src="images/drone.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3 class="price" >$50.48</h3>
+                     <div style="height:1.5rem;">
+                        <i style="color:#fb8200;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;" class="fa-solid fa-star-half-stroke"></i>
+                        <p style="display:inline-block"> &nbsp; 4.99</p>
+                     </div>
+                     <p class="card-text" >Wordwide shifting available
+                        Buyers protection possible!</p>
+                </article>
+                <article>
+                    <img src="images/lights.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3 class="price" >$50.48</h3>
+                     <div style="height:1.5rem;">
+                        <i style="color:#fb8200;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;" class="fa-solid fa-star-half-stroke"></i>
+                        <p style="display:inline-block"> &nbsp; 4.99</p>
+                     </div>
+                     <p class="card-text" >Wordwide shifting available
+                        Buyers protection possible!</p>
+                </article>
+                <article>
+                    <img src="images/setup.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3 class="price" >$50.48</h3>
+                     <div style="height:1.5rem;">
+                        <i style="color:#fb8200;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;;" class="fa-solid fa-star"></i>
+                        <i style="color:#fb8200;" class="fa-solid fa-star-half-stroke"></i>
+                        <p style="display:inline-block"> &nbsp; 4.99</p>
+                     </div>
+                     <p class="card-text" >Wordwide shifting available
+                        Buyers protection possible!</p>
+                </article>
+            </div>
+        </section>
         
-     </header>
+
+           <!--  last part of main section -->
+
+      <section class="last-section">
+            <div class="last-img-container"><img src="images/gear.png" alt=""></div>
+             <div class="some-text">
+                <h2>Featured products at one place</h2>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                  <button style="background-color:#e36019;color:white;padding: 0.4rem 1.5rem;border:none;border-radius: 0.5rem;">Join Now</button>
+             </div>
+      </section>
+
+
+    </main>
+
+        <footer style="background-color: rgb(103, 11, 11);color:white;text-align: center;padding:1.5rem;margin-top:1rem;width:auto;">
+             <h2>Influencer products</h2>
+              <p>Copyright © 2020  influencer products <br>
+                 <strong>All rights reserved</strong></p>
+            
+              <div class="media-icon" style="margin-top:1rem;">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+              </div>
+
+        </footer>
 </body>
+
 </html>
