--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
 
         <!-- The logo Section is started -->
-        <section style="width:75vw;height:auto;border:3px solid black;margin: auto;margin: 2rem auto;">
+        <section style="width:75vw;height:auto;margin: auto;margin: 4rem auto;">
             <div class="logo-container">
                 <img src="logos/Alibaba.svg" alt="">
                 <img src="logos/Amazon.svg" alt="">
@@ -68,7 +68,7 @@
         <!-- The cards of main section started from here  -->
 
 
-        <section style="width:70vw;height:auto;border:3px solid black;margin: auto;margin: 2rem auto;background-color: #e6d1d18e;padding:0.7rem;box-shadow: 0px 0px 15px rgb(108, 98, 98);">
+        <section style="width:70vw;height:auto;margin: auto;margin: 2rem auto;background-color: #e6d1d18e;padding:0.7rem;box-shadow: 0px 0px 15px rgb(108, 98, 98);">
             <div class="cards-container">
                 <article>
                     <img src="images/tripod.png" alt="">
