some styles are given

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="shopping-icon-container"> <i class="fa-solid fa-cart-shopping"></i></div>
-            <h2 class="web-name">Influencer products</h2>
+            <h2 class="web-name"> <span class="ripon-text-style"> Zubaiyer's </span>products</h2>
             <div class="dropdown">
                 <div class="bar-container"><i class="fa-solid fa-bars"></i></div>
                 <ul class="list-container">
@@ -179,7 +179,7 @@
     </main>
 
         <footer style="background-color: rgb(103, 11, 11);color:white;text-align: center;padding:1.5rem;margin-top:1rem;width:auto;">
-             <h2>Influencer products</h2>
+            <h2 style="color:azure"> <!-- Influencer products --> মামা মাসুক তুমি তোমার কাজে মনোযোগ দাও </h2>
               <p>Copyright © 2020  influencer products <br>
                  <strong>All rights reserved</strong></p>
             
